[B]1.0.4[/B]
- new icon thx to freezy
[B]1.0.3[/B]
- added nfo support
[B]1.0.0[/B]
- Initial import into addons repository