@@ -1,3 +1,5 @@
+[B]1.1.0[/B]
+- MusicBrainz - version 2 of XML web service
 [B]1.0.4[/B]
 - new icon thx to freezy
 [B]1.0.3[/B]
